<resources>
    <string name="app_name">مشروعك</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="show_all">عرض الكل</string>
    <string name="loading">جاري التحميل...</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="what_rong">حصل خطأ ما</string>
    <string name="order_now">اطلب الآن</string>
    <string name="error_msg">خطأ في الإتصال</string>
    <string name="btn_retry">إعادة المحاولة</string>
    <string name="error_msg_unknown">خطأ غير معروف</string>
    <string name="error_msg_timeout">عفوا انتهى وقت الاتصال دون استجابة</string>
    <string name="error_msg_no_internet">تحقق من اتصالك بالشبكة</string>
    <string name="conn_error_recyview">خطأ في الإتصال بالشبكة</string>
    <string name="order_fragment_header">إملأ النموذج التالي لطلب الدراسة</string>
    <string name="project_name">اسم المشروع</string>
    <string name="mobile_number">رقم الهاتف</string>
    <string name="full_name">الإسم بالكامل</string>
    <string name="money">رأس مال المشروع</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="project_title">عنوان المشروع</string>
    <string name="products_services">المنتجات/الخدمات</string>
    <string name="details_about_project">تفاصيل عن المشروع</string>
    <string name="send">إرسال</string>
    <string name="order_type">نوع الطلب</string>
    <string name="spin_feasib_study">دراسة جدوى</string>
    <string name="spin_product_line">خط إنتاج</string>
    <string name="spin_work_plan">خطة عمل</string>
    <string name="fill_fields">برجاء إكمال الحقول الفارغة</string>
    <string name="select_order_type">برجاء تحديد نوع الطلب</string>
    <string name="done">done</string>
    <string name="invalid_email">برجاء إدخال الإيميل بصيغة صحيحة</string>
    <string name="ok">موافق</string>
    <string name="sent">تم الإرسال</string>
    <string name="sent_error">خطأ في الإرسال</string>
    <string name="return_period">حساب فترة الاسترداد</string>
    <string name="Initial_investment">الاستثمار الأوّلي</string>
    <string name="net_cash">صافي الربح النقدي</string>
    <string name="calculate">احسب</string>
    <string name="annual_net_cash">صافي الربح السنوي</string>
    <string name="calculate_rate_return">حساب معدل العائد</string>
    <string name="borrowing_amount">مبلغ القرض</string>
    <string name="interest_rate">معدل الفائدة %</string>
    <string name="borrowing_interest">حساب فوائد القروض</string>
    <string name="total_invistment">الاستثمار الكلي</string>
    <string name="btn_description">الوصف</string>
    <string name="btn_products_services">المنتجات والخدمات</string>
    <string name="btn_money">المؤشرات المالية</string>
    <string name="by_feas_study">شراء دراسة الجدوى</string>
    <string name="price">السعر :</string>
    <string name="checkout_order">إتمام الطلب</string>
    <string name="total">الإجمالي : </string>
    <string name="input_full_name">أدخل الإسم بالكامل</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="address">العنوان</string>
    <string name="header_complete_order">إملأ نموذج استكمال الطلب</string>
    <string name="customer_note">ملاحظات الطلب</string>
    <string name="go_to_cart">الذهاب إلى السلة</string>
    <string name="complete_order">استكمال الشراء</string>
    <string name="add_to_cart">المنتج موجود في سلة المشتريات</string>
    <string name="ooops">للأسف..</string>
    <string name="error_connection_message">لم يتم العثور على اتصال بشبكة الانترنت. برجاء مراجعة الاتصال بالشبكة والمحاولة مرة أخرى</string>
    <string name="try_gain">إعادة المحاولة</string>
    <string name="convert">تحويل</string>
    <string name="convert_currency">تحويل العملات</string>
    <string name="cash_to_convert">المبلغ المراد تحويله</string>
    <string name="dollar">دولار أمريكي</string>
    <string name="uoru">اليورو</string>
    <string name="egyp_pound">جنيه مصري</string>
    <string name="kwait_dinar">دينار كويتي</string>
    <string name="iraq_dinar">دينار عراقي</string>
    <string name="lybi_dinar">دينار ليبي</string>
    <string name="emarate_derham">درهم إماراتي</string>
    <string name="saudi_ryal">ريال سعودي</string>
    <string name="qatar_ryal">ريال قطري</string>
    <string name="omani_ryal">ريال عماني</string>
    <string name="convert_from">تحويل من</string>
    <string name="convert_to">تحويل إلى</string>
    <string name="input_cash">برجاء إدخال المبلغ المراد تحويله</string>
    <string name="invalid_currency_from">أدخل العملة المراد التحويل منها</string>
    <string name="invalid_currency_to">أدخل العملة المراد التحويل إليها</string>
    <string name="about_mashroo3k">عن شركة مشروعك</string>
    <string name="to_contact_us">للتواصل معنا</string>
    <string name="delete_now">تأكيد الحذف</string>
    <string name="cancel">الغاء</string>
    <string name="you_want_delete">أنت على وشك حذف منتج من سلة المشتريات</string>
    <string name="search">بحث</string>
    <string-array name="order_type_array">
        <item>دراسة جدوى</item>
        <item>خط إنتاج</item>
        <item>خطة عمل</item>
    </string-array>
</resources>
