<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background_error_connection_dialog"
    android:padding="32dp"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_sad_cloud"
        />
    <com.intellidev.app.mashroo3k.uiutilities.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/ooops"
        android:textSize="24sp"

        />
    <com.intellidev.app.mashroo3k.uiutilities.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/error_connection_message"
        />
    <com.intellidev.app.mashroo3k.uiutilities.CustomButtonTextFont
        android:id="@+id/btn_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="@string/try_gain"
        android:padding="10dp"
        android:layout_marginTop="32dp"
        />
</LinearLayout>