<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background_error_connection_dialog"
    android:padding="32dp"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_delete_logo"
        />

    <com.intellidev.app.mashroo3k.uiutilities.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/you_want_delete"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        >
    <com.intellidev.app.mashroo3k.uiutilities.CustomButtonTextFont
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/blue_light"
        android:text="@string/delete_now"
        android:padding="10dp"
        android:layout_marginEnd="5dp"
        />

        <com.intellidev.app.mashroo3k.uiutilities.CustomButtonTextFont
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/cancel"
            android:padding="10dp"
            android:layout_marginStart="5dp"
            />

    </LinearLayout>
</LinearLayout>