<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@color/background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:gravity="bottom"
        android:orientation="horizontal">
        <com.intellidev.app.mashroo3k.uiutilities.CustomButtonTextFont
            android:id="@+id/btn_descrip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_order_button"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/btn_description"
            android:textColor="@color/white"
            android:textSize="12sp"
            />
        <com.intellidev.app.mashroo3k.uiutilities.CustomButtonTextFont
            android:id="@+id/btn_products_services"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_order_button"
            android:text="@string/btn_products_services"
            android:textSize="12sp"
            />
        <com.intellidev.app.mashroo3k.uiutilities.CustomButtonTextFont
            android:id="@+id/btn_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_order_button"
            android:text="@string/btn_money"
            />

    </LinearLayout>
</RelativeLayout>