<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.intellidev.app.mashroo3k.ui.order.OrderFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_boarder_order_fragment"
            android:orientation="vertical"
            android:layout_marginBottom="40dp"
            >
            <com.intellidev.app.mashroo3k.uiutilities.CustomEditText
                android:id="@+id/et_project_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/project_name"
                android:textColorHint="@color/boarder"
                android:background="@drawable/shape_edit_text"
                android:layout_marginTop="30dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@null"
                android:textColor="@color/gray_blue"
                android:singleLine="true"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                >
                <Spinner
                    android:id="@+id/spin_order_type"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_edit_text"
                    android:popupBackground="@color/white"
                    android:entries="@array/order_type_array"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"

                    >

                </Spinner>

                <com.intellidev.app.mashroo3k.uiutilities.CustomEditText
                    android:id="@+id/et_mob_num"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:hint="@string/mobile_number"
                    android:textColorHint="@color/boarder"
                    android:background="@drawable/shape_edit_text"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/gray_blue"
                    android:singleLine="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:inputType="phone"
                    />
            </LinearLayout>

            <com.intellidev.app.mashroo3k.uiutilities.CustomEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/full_name"
                android:textColorHint="@color/boarder"
                android:background="@drawable/shape_edit_text"
                android:layout_marginTop="24dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@null"
                android:textColor="@color/gray_blue"
                android:singleLine="true"
                />
            <com.intellidev.app.mashroo3k.uiutilities.CustomEditText
                android:id="@+id/et_money"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/money"
                android:textColorHint="@color/boarder"
                android:background="@drawable/shape_edit_text"
                android:layout_marginTop="24dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@null"
                android:textColor="@color/gray_blue"
                android:singleLine="true"
                android:inputType="number"
                />
            <com.intellidev.app.mashroo3k.uiutilities.CustomEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/boarder"
                android:background="@drawable/shape_edit_text"
                android:layout_marginTop="24dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@null"
                android:textColor="@color/gray_blue"
                android:singleLine="true"
                />
            <com.intellidev.app.mashroo3k.uiutilities.CustomEditText
                android:id="@+id/et_project_subject"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/project_title"
                android:textColorHint="@color/boarder"
                android:background="@drawable/shape_edit_text"
                android:layout_marginTop="24dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@null"
                android:textColor="@color/gray_blue"
                android:singleLine="true"
                />
            <com.intellidev.app.mashroo3k.uiutilities.CustomEditText
                android:id="@+id/et_products_services"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/products_services"
                android:textColorHint="@color/boarder"
                android:background="@drawable/shape_edit_text"
                android:layout_marginTop="24dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@null"
                android:textColor="@color/gray_blue"
                android:singleLine="true"
                />
            <com.intellidev.app.mashroo3k.uiutilities.CustomEditText
                android:id="@+id/et_project_details"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/details_about_project"
                android:textColorHint="@color/boarder"
                android:background="@drawable/shape_edit_text"
                android:layout_marginTop="24dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@null"
                android:textColor="@color/gray_blue"
                android:gravity="start"
                />
            <com.intellidev.app.mashroo3k.uiutilities.CustomButtonTextFont
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_order_button"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/send"
                android:layout_marginBottom="16dp"
                />

        </LinearLayout>

        <com.intellidev.app.mashroo3k.uiutilities.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_header_order_fragment"
            android:text="@string/order_fragment_header"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            />

    </RelativeLayout>

</ScrollView>
